# Teste-Tecnico-Python-Acelera-02

./: README.md  erros.csv  kpis.json  main.py  pyproject.toml  relatorio_individual.csv  utils_log.py
